--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -858,7 +858,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>4</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -2656,6 +2656,19 @@ background-color: rgb(0, 0, 0);</string>
              </property>
             </widget>
            </item>
+           <item row="2" column="5">
+            <spacer name="horizontalSpacer_10">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
            <item row="0" column="4">
             <widget class="QToolButton" name="toolButton_37">
              <property name="text">
@@ -2669,18 +2682,18 @@ background-color: rgb(0, 0, 0);</string>
              </property>
             </widget>
            </item>
-           <item row="2" column="4">
-            <spacer name="horizontalSpacer_10">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
+           <item row="0" column="5">
+            <widget class="QToolButton" name="toolButton_38">
+             <property name="text">
+              <string>...</string>
              </property>
-             <property name="sizeHint" stdset="0">
+             <property name="iconSize">
               <size>
-               <width>40</width>
-               <height>20</height>
+               <width>32</width>
+               <height>32</height>
               </size>
              </property>
-            </spacer>
+            </widget>
            </item>
           </layout>
          </item>
